objects/Census_Members__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CensusID__c</fullName>
        <label>CensusID</label>
        <referenceTo>Census__c</referenceTo>
        <relationshipLabel>Census Members</relationshipLabel>
        <relationshipName>Census_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coverage_Level__c</fullName>
        <label>Coverage Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EE</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>EF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Count__c</fullName>
        <label>Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Product_Family__c</fullName>
        <label>Plan Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual Only</fullName>
                </value>
                <value>
                    <fullName>Family Only</fullName>
                </value>
                <value>
                    <fullName>Individual+Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>subscriber</fullName>
                </value>
                <value>
                    <fullName>spouse</fullName>
                </value>
                <value>
                    <fullName>child</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Census Members</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Age__c</columns>
        <columns>Gender__c</columns>
        <columns>Status__c</columns>
        <columns>ZIP__c</columns>
        <columns>Plan_Product_Family__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Census Members Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Census Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Zip_Code_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(ZIP__c , &quot;\\d{5}(-\\d{4})?&quot;)) &amp;&amp; NOT(ISBLANK(ZIP__c)) &amp;&amp; $Profile.Name &lt;&gt; &apos;Service Integration Internal&apos;</errorConditionFormula>
        <errorDisplayField>ZIP__c</errorDisplayField>
        <errorMessage>Invalid Zip Code</errorMessage>
    </validationRules>
</CustomObject>